feat: Adiciona logica para ver quais itens tem dentro da maleta